--- a/overseas/pc/421.html
+++ b/overseas/pc/421.html
@@ -187,7 +187,7 @@
         .wrapper .goods-nav ul{margin-right: -1px;}
         .wrapper .goods-nav li{width: 299px;height: 80px;float: left;background-color: #f1cc0c;margin-right: 1px;position: relative;font:bold 24px/80px Myriad Pro,Arial;}
         .wrapper .goods-nav li.active{background-color: #30c7a6}
-        .wrapper .goods-nav a{display: block;width: 100%;height: 100%;color: #fff;line-height: 80px;}
+        .wrapper .goods-nav a{display: block;width: 100%;height: 100%;color: #fff;line-height: 80px;cursor: pointer}
         .wrapper .goods-nav .tab-t-last{width: 300px;margin-right: 0;}
         .goods-nav-wrap.fixed{position: fixed;width: 1200px;top:0;left: 50%;margin-left: -600px;z-index: 62;}
     </style>
@@ -377,9 +377,9 @@
                 <ul class="cf">
                     <li class="cur miaosha-tab-today">
                         <a href="#nolink" hasclstag="true">
-                    <div class="miaosha-status">
-                        Сегодня
-                    </div>
+                            <div class="miaosha-status">
+                                Сегодня
+                            </div>
                             <div class="miaosha-detail miaosha-countdown">
                                 <span class="miaosha-detail-text">До старта:</span>
                                 <!-- 秒杀开始后，上述文案需要修改为：До конца: -->
@@ -397,9 +397,9 @@
                     <li class="miaosha-tab-tomorrow">
                         <a href="#nolink" hasclstag="true">
                             <div class="miaosha-status">Завтра</div>
-                    <div class="miaosha-detail">
-                        <span class="miaosha-detail-text">Старт завтра в 10:00</span>
-                    </div>
+                            <div class="miaosha-detail">
+                                <span class="miaosha-detail-text">Старт завтра в 10:00</span>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -419,7 +419,7 @@
         <!-- E miaosha -->
         <!-- S 下单赢手机 -->
         <div class="wrap-flr flr-winphone float-flr" id="flr2">
-            <a href="http://vk.com/jd" target="_blank"><img src="//img11.360buyimg.com/cms/jfs/t2692/13/317297842/35704/19e5b2b8/570d1dbdN53aa590f.png" alt=""/></a>
+            <a href="//vk.com/jd" target="_blank"><img src="//img11.360buyimg.com/cms/jfs/t2692/13/317297842/35704/19e5b2b8/570d1dbdN53aa590f.png" alt=""/></a>
         </div>
         <!-- E 下单赢手机 -->
         <div class="goods-nav">
@@ -551,29 +551,29 @@
         </div>
         <!-- E shops4 -->
         <!-- S more category -->
-<div class="wrap-flr flr10 float-flr" id="flr11">
-    <div class="category">
-        <ul class="cf">
-            <li class="item-1"><a href="//www.jd.ru/category/%D0%A1%D0%BE%D1%82%D0%BE%D0%B2%D1%8B%D0%B5%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D1%8B_875064308-875064516-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-1"></span><em>СМАРТФОНЫ</em> </a></li>
-            <li class="item-2"><a href="//www.jd.ru/category/%D1%82%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_875065745-875065752-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-2"></span><em>ПЛАНШЕТЫ</em> </a></li>
-            <li class="item-3"><a href="//www.jd.ru/category/Irons%2C%20Steamers%20%26%20Accessories_875063589-875063831-3.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-3"></span><em>ТЕХНИКА ДЛЯ ЖИЗНИ</em> </a></li>
-            <li class="item-4"><a href="//www.jd.ru/category/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B5%20%D0%BA%D1%83%D1%85%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BC%D0%B5%D1%82%D1%8B_875063586-875063586-2.html?page=1&pageSize=24&showType=grid&brandId=1272" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-4"></span><em>ТЕХНИКА ДЛЯ КУХНИ</em> </a></li>
-            <li class="item-5"><a href="//www.jd.ru/category/Hair%20%26%20Beauty%20Tools_875063305-875063600-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-5"></span><em>УХОД ЗА ЗДОРОВЬЕМ</em> </a></li>
-            <li class="item-6"><a href="//www.jd.ru/category/%D0%98%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B8%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B8_875065261-875065261-2.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-6"></span><em>АУДИО И ВИДЕО</em> </a></li>
-            <li class="item-7"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-7"></span><em>СМАРТ-ОБОРУДОВАНИЕ</em> </a></li>
-            <li class="item-8"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-8"></span><em>АКСЕССУАРЫ ДЛЯ СМАРТФОНОВ</em> </a></li>
-            <li class="item-9"><a href="//www.jd.ru/category/Computer%20Peripherals_875064192-875064210-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-9"></span><em>АКСЕССУАРЫ ДЛЯ ПК</em> </a></li>
-            <li class="item-10"><a href="//www.jd.ru/category/Jewelry%20Sets%20%26%20More_875065203-875065208-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-10"></span><em>УКРАШЕНИЯ И ЧАСЫ</em> </a></li>
-            <li class="item-11"><a href="//www.jd.ru/category/Jackets%20%26%20Coats_875064188-875064635-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-11"></span><em>МУЖСКАЯ ОДЕЖДА</em> </a></li>
-            <li class="item-12"><a href="//www.jd.ru/category/Tops%20%26%20Tees_875064568-875064570-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-12"></span><em>ЖЕНСКАЯ ОДЕЖДА</em> </a></li>
-            <li class="item-13"><a href="//www.jd.ru/category/Outdoor%20Gear_875063307-875063612-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-13"></span><em>СПОРТ И ОТДЫХ </em> </a></li>
-            <li class="item-14"><a href="//www.jd.ru/category/Toy%20%26%20Hobbies_875065568-875065572-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-14"></span><em>ИГРУШКИ</em> </a></li>
-            <li class="item-15"><a href="//www.jd.ru/category/Interior%20Accessories_875063308-875063623-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-15"></span><em>АВТО-ТОВАРЫ</em> </a></li>
-            <li class="item-16"><a href="//www.jd.ru/category/Kitchen%20%26%20Bath%20Fixtures_875063304-875063596-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-16"></span><em>Кухонные принадлежности и гаджеты</em> </a></li>
+        <div class="wrap-flr flr10 float-flr" id="flr11">
+            <div class="category">
+                <ul class="cf">
+                    <li class="item-1"><a href="//www.jd.ru/category/%D0%A1%D0%BE%D1%82%D0%BE%D0%B2%D1%8B%D0%B5%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D1%8B_875064308-875064516-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-1"></span><em>СМАРТФОНЫ</em> </a></li>
+                    <li class="item-2"><a href="//www.jd.ru/category/%D1%82%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_875065745-875065752-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-2"></span><em>ПЛАНШЕТЫ</em> </a></li>
+                    <li class="item-3"><a href="//www.jd.ru/category/Irons%2C%20Steamers%20%26%20Accessories_875063589-875063831-3.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-3"></span><em>ТЕХНИКА ДЛЯ ЖИЗНИ</em> </a></li>
+                    <li class="item-4"><a href="//www.jd.ru/category/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B5%20%D0%BA%D1%83%D1%85%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BC%D0%B5%D1%82%D1%8B_875063586-875063586-2.html?page=1&pageSize=24&showType=grid&brandId=1272" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-4"></span><em>ТЕХНИКА ДЛЯ КУХНИ</em> </a></li>
+                    <li class="item-5"><a href="//www.jd.ru/category/Hair%20%26%20Beauty%20Tools_875063305-875063600-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-5"></span><em>УХОД ЗА ЗДОРОВЬЕМ</em> </a></li>
+                    <li class="item-6"><a href="//www.jd.ru/category/%D0%98%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B8%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B8_875065261-875065261-2.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-6"></span><em>АУДИО И ВИДЕО</em> </a></li>
+                    <li class="item-7"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-7"></span><em>СМАРТ-ОБОРУДОВАНИЕ</em> </a></li>
+                    <li class="item-8"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-8"></span><em>АКСЕССУАРЫ ДЛЯ СМАРТФОНОВ</em> </a></li>
+                    <li class="item-9"><a href="//www.jd.ru/category/Computer%20Peripherals_875064192-875064210-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-9"></span><em>АКСЕССУАРЫ ДЛЯ ПК</em> </a></li>
+                    <li class="item-10"><a href="//www.jd.ru/category/Jewelry%20Sets%20%26%20More_875065203-875065208-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-10"></span><em>УКРАШЕНИЯ И ЧАСЫ</em> </a></li>
+                    <li class="item-11"><a href="//www.jd.ru/category/Jackets%20%26%20Coats_875064188-875064635-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-11"></span><em>МУЖСКАЯ ОДЕЖДА</em> </a></li>
+                    <li class="item-12"><a href="//www.jd.ru/category/Tops%20%26%20Tees_875064568-875064570-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-12"></span><em>ЖЕНСКАЯ ОДЕЖДА</em> </a></li>
+                    <li class="item-13"><a href="//www.jd.ru/category/Outdoor%20Gear_875063307-875063612-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-13"></span><em>СПОРТ И ОТДЫХ </em> </a></li>
+                    <li class="item-14"><a href="//www.jd.ru/category/Toy%20%26%20Hobbies_875065568-875065572-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-14"></span><em>ИГРУШКИ</em> </a></li>
+                    <li class="item-15"><a href="//www.jd.ru/category/Interior%20Accessories_875063308-875063623-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-15"></span><em>АВТО-ТОВАРЫ</em> </a></li>
+                    <li class="item-16"><a href="//www.jd.ru/category/Kitchen%20%26%20Bath%20Fixtures_875063304-875063596-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-16"></span><em>Кухонные принадлежности и гаджеты</em> </a></li>
 
-        </ul>
-    </div>
-</div>
+                </ul>
+            </div>
+        </div>
         <!-- E more category -->
     </div>
     <!-- E bd -->
@@ -587,14 +587,14 @@
         <a href="//itunes.apple.com/us/app/jd.ru/id1070047683?mt=8" class="float-hd-href float-hd-href-2" target="_blank"></a>
     </div>
     <div class="float-bd">
-            <a href="#flr1" hasclstag="true">Успей купить<span class="float-line"></span></a>
-            <a href="#flr2" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Выиграй</span><span>смартфон</span><span class="float-line"></span></a>
-            <a href="#flr3" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Ликвидация</span><span>по супер цене</span><span class="float-line"></span></a>
-            <a href="#flr4" hasclstag="true">Смартфоны<span class="float-line"></span></a>
-            <a href="#flr5" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Цифровая</span><span>техника</span><span class="float-line"></span></a>
-            <a href="#flr6" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Повседневные</span><span>товары</span></a>
-            <a href="#flr6" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Бытовая</span><span>техника</span></a>
-            <a href="#flr1" hasclstag="true">Больше<span class="float-line"></span></a>
+        <a href="#flr1" hasclstag="true">Успей купить<span class="float-line"></span></a>
+        <a href="#flr2" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Выиграй</span><span>смартфон</span><span class="float-line"></span></a>
+        <a href="#flr3" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Ликвидация</span><span>по супер цене</span><span class="float-line"></span></a>
+        <a href="#flr4" hasclstag="true">Смартфоны<span class="float-line"></span></a>
+        <a href="#flr5" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Цифровая</span><span>техника</span><span class="float-line"></span></a>
+        <a href="#flr6" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Повседневные</span><span>товары</span></a>
+        <a href="#flr6" hasclstag="true" class="float-two-row"><span class="float-two-row-first">Бытовая</span><span>техника</span></a>
+        <a href="#flr1" hasclstag="true">Больше<span class="float-line"></span></a>
 
     </div>
     <a href="#" class="float-to-top" hasclstag="true"><span class="icon icon-top"></span><span class="float-top-text">Наверх</span></a>
@@ -751,21 +751,21 @@
                     <span class="jd-own">Коллекция JD </span>
                     {% } %}
                 </div>
-            <div class="goods-name">
-                <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" hasclstag="true">{%=recommendName%}</a>
-            </div>
-            <div class="goods-price">
-                ${%=jdPrice%}
-            </div>
-            <div class="goods-price-old">
-                ${%=normalPrice%}
-            </div>
-            {% if (t>0) { %}
-            <div class="goods-discount pos-abs"><em class="goods-discount-no">{%= getParseInt(t) %}</em>% СКИДКА</div>
-            {% } %}
-            <div class="goods-btn">
-                <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" hasclstag="true">Купить &gt;</a>
-            </div>
+                <div class="goods-name">
+                    <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" hasclstag="true">{%=recommendName%}</a>
+                </div>
+                <div class="goods-price">
+                    ${%=jdPrice%}
+                </div>
+                <div class="goods-price-old">
+                    ${%=normalPrice%}
+                </div>
+                {% if (t>0) { %}
+                <div class="goods-discount pos-abs"><em class="goods-discount-no">{%= getParseInt(t) %}</em>% СКИДКА</div>
+                {% } %}
+                <div class="goods-btn">
+                    <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" hasclstag="true">Купить &gt;</a>
+                </div>
                 <div class="goods-btn goods-btn-wish">
                     <a href="#" class="goods-href-wish" spuid="{%= id %}" hasclstag="true"><i class="icon icon-wish"></i><span class="goods-href-desc">В "мои желания"</span></a>
                     <span href="#" class="goods-href-wished"><i class="icon icon-wish"></i><span class="goods-href-desc">В "мои желания"</span></span>
@@ -797,9 +797,9 @@
         {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
         <!-- S 商品信息 -->
 
-            <a href="{%=recommendUrl%}" class="href-img" target="_blank" hasclstag="true">
-                <image init_src="{%=image%}"></image>
-            </a>
+        <a href="{%=recommendUrl%}" class="href-img" target="_blank" hasclstag="true">
+            <image init_src="{%=image%}"></image>
+        </a>
         <div class="goods-detail">
             <div class="goods-other">
                 {% if(defined1 != 0){ %}
