--- a/overseas/pc/421_en.html
+++ b/overseas/pc/421_en.html
@@ -143,14 +143,14 @@
         .icon-back-9 {background:  -0px -352px;}
         /* icon pos */
         .flr1 .icon-hd{background-position: 0 0;}
-        .flr2 .icon-hd{background-position: 0 -130px;}
-        .flr3 .icon-hd{background-position: 0 -260px;}
-        .flr4 .icon-hd{background-position: 0 -390px;}
-        .flr5 .icon-hd{background-position: 0 -520px;}
-        .flr6 .icon-hd{background-position: 0 -650px;}
-        .flr7 .icon-hd{background-position: 0 -780px;}
-        .flr8 .icon-hd{background-position: 0 -910px;}
-        .flr9 .icon-hd{background-position: 0 -1040px;}
+        .flr2 .icon-hd{background-position: 0 0;}
+        .flr3 .icon-hd{background-position: 0 -130px;}
+        .flr4 .icon-hd{background-position: 0 -260px;}
+        .flr5 .icon-hd{background-position: 0 -390px;}
+        .flr6 .icon-hd{background-position: 0 -520px;}
+        .flr7 .icon-hd{background-position: 0 -650px;}
+        .flr8 .icon-hd{background-position: 0 -780px;}
+        .flr9 .icon-hd{background-position: 0 -910px;}
         .flr2 .icon-more{background-position: 0 -1170px;}
         .flr3 .icon-more{background-position: 0 -1300px;}
         .flr4 .icon-more{background-position: 0 -1430px;}
@@ -200,7 +200,7 @@
         .wrapper .goods-nav ul{margin-right: -1px;}
         .wrapper .goods-nav li{width: 299px;height: 80px;float: left;background-color: #f1cc0c;margin-right: 1px;position: relative;font:bold 24px/80px Myriad Pro,Arial;}
         .wrapper .goods-nav li.active{background-color: #30c7a6}
-        .wrapper .goods-nav a{display: block;width: 100%;height: 100%;color: #fff;line-height: 80px;}
+        .wrapper .goods-nav a{display: block;width: 100%;height: 100%;color: #fff;line-height: 80px;cursor: pointer}
         .wrapper .goods-nav .tab-t-last{width: 300px;margin-right: 0;}
         .goods-nav-wrap.fixed{position: fixed;width: 1200px;top:0;left: 50%;margin-left: -600px;z-index: 62;}
     </style>
