--- a/overseas/pc/421.html
+++ b/overseas/pc/421.html
@@ -181,7 +181,7 @@
         .goods-btn-wish .wish-tips{position: absolute;top: 30px;left: 0;padding: 0 3px;height: auto;line-height: 1.2;display: none;font-size: 12px;color: #f00000;text-align: left;}
         .goods-btn-wish .goods-href-wished{display: none;}
         .goods-btn-wish-used .goods-href-wished{display: block;}
-        .wrap-pre .goods-btn-wish{display: block}
+        .wrap-pre .goods-btn-wish,.miaosha-next .goods-btn-wish{display: block}
         /* nav */
         .wrapper .goods-nav-wrap{width: 100%;height: 80px;border-bottom: 4px solid #30c7a6;text-align: center;overflow: hidden;background-color: #f50d2d;}
         .wrapper .goods-nav ul{margin-right: -1px;}
@@ -411,7 +411,7 @@
                         <!-- 今日秒杀列表：不显示请用行内样式控制 -->
                         <ul class="cf wrap-goods" marketstart="0" marketlength="4"  markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9918477b2.js" id="" marketonload="goodsLoad(1);" style="display: block"></ul>
                         <!-- 下期秒杀列表：不显示请用行内样式控制 -->
-                        <ul class="cf wrap-goods" marketstart="0" marketlength="4" markettplid="miaoNextTpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9e01a83ca.js" id="" marketonload="goodsLoad(1);"></ul>
+                        <ul class="cf wrap-goods miaosha-next" marketstart="0" marketlength="4" markettplid="miaoNextTpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9e01a83ca.js" id="" marketonload="goodsLoad(1);"></ul>
                     </div>
                 </div>
             </div>
@@ -928,6 +928,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             })
         })
         activityDateJudge(new Date().getDate());
+        wishPro();
         var nav3 = {
             element: $('.goods-nav'),
             tabTit: '.tab-tit',
@@ -1016,7 +1017,6 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
     function activityDateJudge(_date){
         if(_date > 13 && _date <21){
             $('.wrapper').addClass('wrap-pre');
-            wishPro();
         }
         else if(_date >20){
             $('.wrapper').addClass('wrap-main');
