421M店铺链接填在“商品广告语”字段，APP店铺链接用关键词跳转，填在“店铺名”

--- a/overseas/M/421.html
+++ b/overseas/M/421.html
@@ -409,7 +409,7 @@
 </script>
 <script type="text/html" id="listShop">
     <li>
-        <a href="{%=recommendUrl%}" target="_blank" class="href-img" hasclstag="true"><image init_src="{%=image%}"></image></a>
+        <a href="{%=recommendAd%}" class="href-img" hasclstag="true"><image init_src="{%=image%}"></image></a>
     </li>
 </script>
 
