--- a/overseas/M/421_app.html
+++ b/overseas/M/421_app.html
@@ -407,14 +407,9 @@
         <p class="wish-tips">Товар был успешно добавлен в корзину!</p>
     </li>
 </script>
-<script type="text/html" id="listAd">
-    <a href="{%=recommendUrl}" class="href-img" target="_blank" hasclstag="true">
-        <image init_src="{%=image%}"></image>
-    </a>
-</script>
 <script type="text/html" id="listShop">
     <li>
-        <a href="{%=recommendUrl%}" target="_blank" class="href-img" hasclstag="true"><image init_src="{%=image%}"></image></a>
+        <a href="javascript:;" onclick="window.activity.gotoSearch('search', '{%= shopName %}');" class="href-img" hasclstag="true"><image init_src="{%=image%}"></image></a>
     </li>
 </script>
 
