421M店铺链接填在“商品广告语”字段，APP店铺链接用关键词跳转，填在“店铺名”，修改M版链接跳转http://m.jd.ru/{%= id %}.html

--- a/overseas/M/421.html
+++ b/overseas/M/421.html
@@ -342,7 +342,7 @@
 <script type="text/html" id="list1Tpl">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/ware/detail/{%= id %}" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
@@ -376,7 +376,7 @@
 <script type="text/html" id="miaoNextTpl">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/ware/detail/{%= id %}" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
@@ -416,7 +416,7 @@
 <script type="text/html" id="listHot">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/ware/detail/{%= id %}" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
